@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.1 2001/10/31 22:12:02 zuntum Exp $
+@comment $NetBSD: PLIST,v 1.2 2005/10/23 23:01:49 rillig Exp $
 bin/xdaemon
 bin/xdaemon2
 share/doc/xdaemon.README
@@ -10,3 +10,11 @@ share/xteddy/pixmaps/xdaemon_bw.xbm
 share/xteddy/pixmaps/xdaemon_color.xpm
 share/xteddy/pixmaps/xdaemon_icon.xbm
 share/xteddy/pixmaps/xdaemon_mask.xbm
+share/xteddy/pixmaps/xnetbsd-flag_bw.xbm
+share/xteddy/pixmaps/xnetbsd-flag_color.xpm
+share/xteddy/pixmaps/xnetbsd-flag_icon.xbm
+share/xteddy/pixmaps/xnetbsd-flag_mask.xbm
+share/xteddy/pixmaps/xnetbsd-flag2_bw.xbm
+share/xteddy/pixmaps/xnetbsd-flag2_color.xpm
+share/xteddy/pixmaps/xnetbsd-flag2_icon.xbm
+share/xteddy/pixmaps/xnetbsd-flag2_mask.xbm
