@@ -1,6 +1,10 @@
-@comment $NetBSD: PLIST,v 1.1 2001/10/31 22:12:03 zuntum Exp $
+@comment $NetBSD: PLIST,v 1.2 2005/10/23 23:04:00 rillig Exp $
 bin/xdaemon
 bin/xdaemon2
+bin/xnetbsd-flag
+bin/xnetbsd-flag2
 share/doc/xdaemon.README
 share/xteddy/xdaemon.png
 share/xteddy/xdaemon2.png
+share/xteddy/xnetbsd-flag.png
+share/xteddy/xnetbsd-flag2.png
