@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.13144 2006/03/02 20:35:35 agc Exp $
+$NetBSD: CHANGES,v 1.13145 2006/03/02 21:12:15 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -1300,3 +1300,5 @@ Changes to the packages collection and infrastructure in 2006:
 	Updated devel/cqual to 0.991nb5 [wiz 2006-03-02]
 	Updated pkgtools/digest to 20060302 [agc 2006-03-02]
 	Updated mail/gld to 1.6 [wiz 2006-03-02]
+	Updated x11/xdaemon to 1.1 [hubertf 2006-03-02]
+	Updated x11/xdaemon2 to 2.1 [hubertf 2006-03-02]
